# castsvg

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: altscreen.cast  demo.cast
npm/: README.md  install.js  package.json
src/: cast.rs  main.rs  record.rs  svg.rs  term.rs
