[package]
name = "castsvg"
version = "0.1.0"
edition = "2021"
description = "Record terminal sessions and render them as self-contained animated SVG — a single static binary, no Node or Python runtime."
license = "MIT"
repository = "https://github.com/YOUR_USER/castsvg"
readme = "README.md"
keywords = ["terminal", "svg", "asciinema", "recording", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "castsvg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
vte = "0.13"
anyhow = "1"

# Recording backend (PTY). Compiles on Windows (ConPTY), macOS and Linux.
portable-pty = "0.8"
crossterm = "0.27"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
